<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Snip</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="creating_account">Creating account...</string>

    <!-- Chat Activity -->
    <string name="welcome_to_chat">Welcome to Chat!</string>
    <string name="type_message">Type a message</string>
    <string name="send">Send</string>
</resources>
